--- a/style/style.css
+++ b/style/style.css
@@ -83,7 +83,9 @@
 .hero {
     background-image: url('/images/developer.png'), url('/images/header_bg.png');
     background-repeat: no-repeat, no-repeat;
-    background-position: calc((100% - 1280px) / 2 - 150px), calc(100% - ((100% - 1280px) / 2 + 98px))bottom
+    background-position:
+        calc((100% - 1280px) / 2 - 150px) center,
+        calc(100% - ((100% - 1280px)/2) - 100px) bottom;
 }
 
 /* Navbar Style */
@@ -162,4 +164,33 @@ nav ul {
     line-height: 30px;
     color: #474747;
     font-weight: 700;
+}
+
+/* What I Do Section */
+.what-i-do{
+    text-align: center;
+}
+.what-i-do-text{
+    width: 70%;
+    margin: 20px auto;
+}
+.cards{
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    gap: 24px;
+    margin-top: 50px;
+}
+.card{
+    background-color: white;
+    border-radius: 5px;
+    box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
+    padding: 30px;
+    text-align: left;
+}
+.card h3{
+    font-size: 20px;
+    font-weight: 700;
+    color: #181818;
+    margin-top: 30px;
+    margin-bottom: 20px;
 }
