--- a/style/style.css
+++ b/style/style.css
@@ -45,6 +45,7 @@
     font-weight: 700;
     font-size: 35px;
     color: #181818;
+    text-align: center;
 }
 
 /* Small Paragraph Text */
@@ -167,30 +168,77 @@ nav ul {
 }
 
 /* What I Do Section */
-.what-i-do{
+.what-i-do {
     text-align: center;
 }
-.what-i-do-text{
+
+.what-i-do-text {
     width: 70%;
     margin: 20px auto;
 }
-.cards{
+
+.cards {
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     gap: 24px;
     margin-top: 50px;
 }
-.card{
+
+.card {
     background-color: white;
     border-radius: 5px;
     box-shadow: 0 6px 50px 0 rgba(0, 0, 0, 0.06);
     padding: 30px;
     text-align: left;
 }
-.card h3{
+
+.card h3 {
     font-size: 20px;
     font-weight: 700;
     color: #181818;
     margin-top: 30px;
     margin-bottom: 20px;
+}
+
+/* Resume Section */
+.resume {
+    margin: 130px auto;
+    text-align: center;
+}
+
+
+.resume-content {
+    margin-top: 110px;
+    margin-bottom: 50px;
+    gap: 70px;
+    text-align: left;
+}
+
+.resume-title {
+    font-weight: 700;
+    font-size: 30px;
+    color: #474747;
+}
+
+.resume-box {
+    border-bottom: 1px solid #D1D1D1;
+    padding: 30px 0;
+}
+
+.resume-box h3 {
+    font-weight: 700;
+    font-size: 25px;
+    color: #474747;
+}
+
+.resume-box h4 {
+    font-weight: 600;
+    font-size: 20px;
+    color: #757575;
+    margin-top: 10px;
+    margin-bottom: 20px;
+}
+
+.resume-box p {
+    width: 80%;
 }
